fix: wrapping issue in education section and add dynamic versioning to main.js and main.css so that cloudflare doesn't send cached versions

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -681,6 +681,7 @@ html {
                         &.card {
                             padding: 20px 0;
                             background-color: @off-white;
+                            display: grid;
                             
                             h4 {
                                 padding: 2% 2% 1% 2%;
@@ -698,9 +699,10 @@ html {
                             }
                             
                             ul {
-                                margin: 20px auto;
+                                margin: 20px;
                                 padding-left: 25px;
                                 list-style-type: circle;
+                                justify-self: center;
 
                                 li {
                                     margin-bottom: 10px;
@@ -1028,9 +1030,6 @@ html {
                                 }
 
                                 ul {
-                                    margin: 20px auto;
-                                    padding-left: 25px;
-                                    width: 300px;
 
                                     li {
                                         margin-bottom: 10px;
